// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error component with default props match snapshot with default text 1`] = `
<div
  className="error-container "
>
  <img
    alt="Something Went Wrong"
    src="alert.svg"
  />
  <pre>
    Something Went Wrong
  </pre>
</div>
`;

exports[`Error component with non-default props match snapshot with non-default text 1`] = `
<div
  className="error-container "
>
  <img
    alt="hello world"
    src="alert.svg"
  />
  <pre>
    hello world
  </pre>
</div>
`;
